@@ -76,9 +76,9 @@ copyright = u'2013, John Evans'
 # built documents.
 #
 # The short X.Y version.
-version = '0.6'
+version = '0.7'
 # The full version, including alpha/beta/rc tags.
-release = '0.6.0'
+release = '0.7.0rc1'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
