@@ -1,0 +1,11 @@
+=====================
+Changes in glymur 0.7
+=====================
+
+Changes in 0.7.0
+=================
+
+    * implemented :py:meth:`__getitem__`, :py:meth:`__setitem__` support
+    * added back windows support
+    * box_id and longname are class attributes now instead of instance
+      attributes (see issue 248)
