@@ -1,3 +1,5 @@
+Sep 25, 2014 - -v0.7.0  Added __getitem__, __setitem__ support.
+
 Mar 06, 2014 - Added Cinema2K, Cinema4K write support.
     Changed constructor for ChannelDefinition box.  Removed support
     for Python 2.6.  Added write support for JP2 UUID, DataEntryURL,
